--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "node-modules": "^1.0.1",
     "pg": "^8.9.0",
     "pg-promise": "^11.2.0"
   },
